# netq_support_tools_demo

./: .gitignore  README.md  SECURITY_REPORT.md  tasks.md
netq-log-platform/backend/: .env.example  Dockerfile  README.md  cookies.example.txt  pyproject.toml
netq-log-platform/backend/app/: main.py
netq-log-platform/backend/app/api/: router.py
netq-log-platform/backend/app/api/routes/: audit_logs.py  auth.py
netq-log-platform/backend/app/application/audit_logs/: service.py
netq-log-platform/backend/app/application/auth/: __init__.py  service.py
netq-log-platform/backend/app/core/: config.py  observability.py
netq-log-platform/backend/app/domain/audit_logs/: schemas.py
netq-log-platform/backend/app/domain/auth/: __init__.py  errors.py  schemas.py
netq-log-platform/backend/app/infrastructure/audit_logs/: gateway.py
netq-log-platform/backend/app/infrastructure/auth/: gateway.py  ldap_client.py
netq-log-platform/backend/app/infrastructure/http/: client.py  errors.py
netq-log-platform/backend/app/infrastructure/sigra/: soap_client.py
netq-log-platform/backend/netq_log_platform_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
netq-log-platform/backend/tests/: conftest.py  test_config.py  test_main.py  test_observability.py
netq-log-platform/backend/tests/audit_logs/: test_audit_logs_api.py  test_audit_logs_gateway.py  test_audit_logs_service.py
netq-log-platform/backend/tests/auth/: test_auth_api.py  test_auth_gateway.py  test_ldap_client.py
netq-log-platform/backend/tests/infrastructure/: test_http_client.py  test_sigra_soap_client.py
(+109 files in other folders)
